# eden-bot

./: .gitignore  CITIES  LICENSE  client.py  constants.py  main.py  pyproject.toml  readme.md
bot/: __main__.py  bot.py  rules.py
bot/handlers/: __init__.py  admin.py  feed.py  like.py  profile.py  report.py  requests.py  reset.py  settings.py  start.py
bot/keyboard/: generators.py
bot/middlewares/: __init__.py  access.py  last_active.py  register.py
bot/tools/: city.py  safety.py  send.py  suggest.py
database/: __init__.py  admin.py  like.py  picture.py  uni.py  user.py
database/queries/: add_checked.edgeql  add_report.edgeql  delete_admin.edgeql  delete_likes.edgeql  delete_user.edgeql  delete_user_pictures.edgeql  full_user.edgeql  get_admin.edgeql  get_like.edgeql  get_profile_picture.edgeql  get_reported.edgeql  get_stats.edgeql  insert_many_pictures.edgeql  like_set_seen.edgeql  likes_smart.edgeql  new_admin.edgeql  new_like.edgeql  new_picture.edgeql  new_user.edgeql  search_uni.edgeql  set_city.edgeql  set_uni.edgeql  toggle_safe_mode.edgeql  unseen_likes.edgeql  (+3 more)
dbschema/: default.esdl
handlers/: admin.py  feed.py  like.py  profile.py  report.py  requests.py  reset.py  settings.py  start.py
keyboard/: keyboard.py  set.py
logic/: __init__.py  permissions.py  rules.py
middlewares/: __init__.py  check_likes.py  last_active.py  register.py
services/: __init__.py  nsfw_detection.py
tasks/: notify.py
tools/: __init__.py  city.py  send.py  string.py  suggest.py
web/: __init__.py  __main__.py  application.py  dependencies.py  jwt_token.py
(+14 files in other folders)
