[tool.poetry]
name = "plantsman"
version = "0.1.0"
description = "Bot to find new people"
authors = ["timoniq"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
envparse = "^0.2.0"
edgedb = "^0.23.0"
aiofiles = "^0.8.0"
telegrinder = "^0.1.dev1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
